# AFMM-Skeletonization

./: Readme.md
method_1/c/: CMakeLists.txt  Readme.md
method_1/c/src/: main.c  skeletongrad.c  skeletongrad.h
method_1/cython/: Readme.md  main.py  requirements.txt  scratchpad.py  setup.py  skelgrad.cp312-win_amd64.pyd  skelgrad.cpp  skelgrad.pyx  skelgrad_pythonic_slow.pyx
method_1/pybind/: Readme.md  main.py  pybind_skelgrad.cpp  pyskelgrad.cp312-win_amd64.pyd  requirements.txt  setup.py  skeletongrad.c  skeletongrad.h
method_1/pybind/pyskelgrad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
method_1/python/: Readme.md  main.py  requirements.txt  skeleton.py
method_2/c/: CMakeLists.txt  Readme.md
method_2/c/src/: afmm.c  afmm.h  main.c
method_2/cython/: Readme.md  afmm.cp312-win_amd64.pyd  afmm.cpp  afmm.pyx  main.py  requirements.txt  setup.py
method_2/pybind/: Readme.md  main.py  requirements.txt
method_2/pybind/pyafmm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
method_2/python/: Readme.md  afmm.py  datastructure.py  main.py  scratchpad.py  utils.py
method_2/python_jit/: Readme.md  afmm.py  logging_config.py  main.py  requirements.txt  utils.py
